[gd_scene load_steps=11 format=3 uid="uid://ljlwsdlblaos"]

[ext_resource type="Script" path="res://Scripts/menu/pause_menu.gd" id="1_e8w1p"]
[ext_resource type="FontFile" uid="uid://gh3mknrglbsr" path="res://Resources/font/The Wild Breath of Zelda.otf" id="1_ux4a1"]
[ext_resource type="FontFile" uid="uid://plk2ssnqqgfy" path="res://Resources/font/MotionControl-Bold.otf" id="2_v5ya8"]
[ext_resource type="Script" path="res://Scripts/menu/PauseMenu/resume.gd" id="3_c4brl"]
[ext_resource type="AudioStream" uid="uid://dapt6hwr4h0r2" path="res://Resources/sound/menu_sfx/menu_hover.wav" id="5_ewupv"]
[ext_resource type="AudioStream" uid="uid://bonopwd1xuju2" path="res://Resources/sound/menu_sfx/menu_select.wav" id="6_drlnw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g0l5f"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="Theme" id="Theme_of743"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ma075"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5mk75"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_e8w1p")

[node name="Panel" type="Panel" parent="."]
offset_top = 1.0
offset_right = 1153.0
offset_bottom = 647.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_g0l5f")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
offset_left = 256.0
offset_top = 194.0
offset_right = 839.0
offset_bottom = 518.0
theme = SubResource("Theme_of743")

[node name="Label" type="Label" parent="Panel/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ux4a1")
theme_override_font_sizes/font_size = 60
text = "PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Main" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="Resume" type="Button" parent="Panel/MarginContainer/Main"]
process_mode = 3
layout_mode = 2
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_v5ya8")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_ma075")
text = "Resume"
script = ExtResource("3_c4brl")

[node name="Quit" type="Button" parent="Panel/MarginContainer/Main"]
process_mode = 3
layout_mode = 2
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_v5ya8")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_5mk75")
text = "Quit"

[node name="ResumeTimer" type="Timer" parent="Panel/MarginContainer/Main"]
process_mode = 3
one_shot = true

[node name="QuitTimer" type="Timer" parent="Panel/MarginContainer/Main"]
process_mode = 3
one_shot = true

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
text = "Version 1.0.0"
horizontal_alignment = 1

[node name="copyright" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
text = "Copyrighted Â© PorthrisNaagu, 2024 "
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFX" type="Node" parent="."]

[node name="Hover" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("5_ewupv")
max_polyphony = 5

[node name="Select" type="AudioStreamPlayer" parent="SFX"]
process_mode = 3
stream = ExtResource("6_drlnw")
max_polyphony = 5

[connection signal="mouse_entered" from="Panel/MarginContainer/Main/Resume" to="." method="_on_resume_mouse_entered"]
[connection signal="pressed" from="Panel/MarginContainer/Main/Resume" to="." method="_on_resume_pressed"]
[connection signal="mouse_entered" from="Panel/MarginContainer/Main/Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="Panel/MarginContainer/Main/Quit" to="." method="_on_quit_pressed"]
[connection signal="timeout" from="Panel/MarginContainer/Main/ResumeTimer" to="." method="_on_resume_timer_timeout"]
[connection signal="timeout" from="Panel/MarginContainer/Main/QuitTimer" to="." method="_on_quit_timer_timeout"]
